@@ -2,6 +2,9 @@
 
 	* org-id.el (org-id-uuid): New function.  Return string with
 	random (version 4) UUID.
+	(org-id-method): Make 'uuid the new default value.
+	(org-id-new): Use `org-id-uuid' if call to uuidgen program
+	does not return a UUID.
 
 2010-05-15  Carsten Dominik  <carsten.dominik@gmail.com>
 
